# XAI-Mammogram-Classification

./: .env.example  .gitignore  README.md  environment.yml  example.csv  main.py  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
ProtoPNet/: add_on_layers.py  find_nearest.py  main.py  model.py  prune.py  push.py  receptive_field.py  run_pruning.py  train_and_test.py
ProtoPNet/conf/: _hydra_config.yaml  main_config.yaml  script_define_mean_config.yaml  script_protopnet_run_pruning.yaml
ProtoPNet/conf/cross_validation/: _cross_validation_config.yaml  balanced.yaml
ProtoPNet/conf/model/: bagnet.yaml  protopnet.yaml
ProtoPNet/conf/network/: _network_config.yaml
ProtoPNet/config/: datasets.py
ProtoPNet/config/backbone_features/: __init__.py  densenet_features.py  resnet_features.py  vgg_features.py
ProtoPNet/dataset/: metadata.py
ProtoPNet/dataset/dataloaders/: DDSM.py  MIAS.py  __init__.py
ProtoPNet/models/: README.md
ProtoPNet/models/BagNet/: __init__.py  _construct.py
ProtoPNet/models/ProtoPNet/: __init__.py  _construct.py
ProtoPNet/models/utils/: helpers.py
ProtoPNet/post_analysis/: build_confusion_matrix.py  calc_f1_score.py  compare_proto_self_act.py  extract_loss_terms_from_log.py  extract_misclassified_images.py  extract_prototype_vectors.py  generate_misclassification_collage.py  global_analysis.py  save_predictions.py  visualize_activation_of_classes.py
ProtoPNet/scripts/: plot.py  reformat_code.sh
ProtoPNet/scripts/datasets/: convert_png_to_npz.py  define_mean_and_std.py
ProtoPNet/scripts/post_analysis/: generate_heatmaps_misclassification.py  generate_prototype_collage.py  iou_of_prediction.py  local_analysis.py  local_analysis2.py  select_images.py  test_accuracy.py  visualize_loss_terms.py
ProtoPNet/util/: args.py  config_types.py  cross_validation.py  errors.py  helpers.py  log.py  preprocess.py  save.py
ProtoPNet/util/split_data/: __init__.py  cross_validation.py
ProtoPNet/utils/: environment.py  helpers.py  log.py
ProtoPNet/utils/config/: resolvers.py  script_main.py  types.py
ProtoPNet/utils/errors/: __init__.py  file_errors.py
ProtoPNet/utils/split_data/: __init__.py
xai_mam/: combine_models.ipynb  main.py
xai_mam/conf/: _hydra_config.yaml  main_config.yaml  script_augment_config.yaml  script_convert_images_config.yaml  script_define_mean_config.yaml  script_plot_heatmap_bagnet.yaml  script_protopnet_run_pruning.yaml  script_protopnet_visualize_activations.yaml  script_train_resnet50_on_MIAS.yaml  script_train_resnet_torchvision_config.yaml  script_train_torchvision_resnet_on_CIFAR.yaml  script_train_torchvision_resnet_on_mammograms.yaml
xai_mam/conf/cross_validation/: stratified.yaml
xai_mam/conf/model/: _model_config.yaml  bagnet.yaml  protopnet.yaml
xai_mam/dataset/: metadata.py
xai_mam/dataset/dataloaders/: __init__.py
xai_mam/models/: README.md  _base_classes.py
xai_mam/models/BagNet/: __init__.py  _construct.py
xai_mam/models/ProtoPNet/: __init__.py  _construct.py
xai_mam/models/utils/: helpers.py
xai_mam/scripts/: plot.py  reformat_code.sh
xai_mam/scripts/datasets/: augment.py  convert_png_to_npz.py  define_mean_and_std.py  restructure_CIFAR.py
xai_mam/utils/: custom_pipe.py  environment.py  helpers.py  log.py  preprocess.py
xai_mam/utils/config/: __init__.py  types.py  (+2 more)
(+131 files in other folders)
