[tool.poetry]
name = "ProtoPNet"
version = "1.0"
description = ""
authors = ["Author Name <author.name@email.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
albumentations = "^1.3.1"
matplotlib = "^3.8.0"
numpy = "^1.25.2"
opencv-contrib-python = "^4.8.1"
pandas = "^2.1.1"
python-dotenv = "^1.0.0"
scikit-learn = "^1.3.1"
torch = { version = "2.0.1+cu118", source = "torch" }
torchvision = { version = "0.15.2+cu118", source = "torch" }
tqdm = "^4.66.1"
argparse = "^1.4.0"
pipe = "^2.0"
hydra-core = "^1.3.2"
icecream = "^2.1.3"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
flake8-pyproject = "^1.2.3"
isort = "^5.12.0"
pre-commit = "^3.4.0"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["F401", "E402"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"