[tool.poetry]
name = "ProtoPNet"
version = "1.0"
description = ""
authors = ["Author Name <author.name@email.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "torch+cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
albumentations = "^1.3.1"
argparse = "^1.4.0"
hydra-core = "^1.3.2"
icecream = "^2.1.3"
numpy = "^1.25.2"
matplotlib = "^3.8.2"
opencv-python = "^4.9.0.80"
pandas = "^2.1.1"
pipe = "^2.0"
python-dotenv = "^1.0.0"
seaborn = [
	{version="^0.13.2", platform="darwin"},
	{version="^0.13.1", platform="linux"}
]
scikit-learn = "^1.3.1"
tensorboard = "^2.16.2"
torch = [
	{version = "^2.2.0", platform = "darwin"},
	{version = "2.2.0+cu121", source = "torch+cu121", platform = "linux"}
]
torchvision = [
	{version = "^0.17.0", platform = "darwin"},
	{version = "0.17.0+cu121", source = "torch+cu121", platform = "linux"}
]
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8-pyproject = "^1.2.3"
flake8-bugbear = "^23.12.2"
isort = "^5.12.0"
pre-commit = "^3.4.0"

[tool.black]
line-length = 88

[tool.flake8]
ignore = ["E203", "E302", "E501", "E999", "W503"]
max-line-length = 88
max-complexity = 12
select = ["B", "C", "E", "F", "W", "B9"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
